--- a/app/src/main/res/menu/speedmeter.xml
+++ b/app/src/main/res/menu/speedmeter.xml
@@ -2,16 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <item android:id="@+id/item1"
         android:title="@string/speed"
         android:icon="@drawable/ic_speed"
-        app:showAsAction="always"
-
+        app:showAsAction="never"
         >
         <menu>
-
-
 
             <item
                 android:id="@+id/Slow"
